MODULE TOP SECTION: Add svg map wrapper

--- a/src/html_modules/_top-section.html
+++ b/src/html_modules/_top-section.html
@@ -1,4 +1,5 @@
 <section class="style-1 top-section" id="top-section" data-svg="data/data.json">
+	<div class="top-section__map" id="top-section__map"></div>
 	<!-- CONTAINER -->
 	<div class="container">
 		<div class="top-section__content">
