MODULE PERSON DETAILS: Edit html

--- a/src/html_modules/_person-details.html
+++ b/src/html_modules/_person-details.html
@@ -1,6 +1,6 @@
 <section class="style-1 person-details">
-	<div class="content content-3">
-		<aside class="content__aside content-3__aside">
+	<div class="content content-3 person-details__content">
+		<aside class="content__aside content-3__aside person-details__aside">
 			<div class="list-img person-details__img">
 				<picture>
 					<source srcset="img/webp/person-1-img--big.webp" type="image/webp">
@@ -8,7 +8,7 @@
 				</picture>
 			</div>
 		</aside>
-		<div class="content__main content-3__main">
+		<div class="content__main content-3__main person-details__main">
 			<h1>Yuriy<br>
 				Lysenko</h1>
 			<ul class="person-details__social">
