--- a/src/html_modules/_about-2.html
+++ b/src/html_modules/_about-2.html
@@ -1,10 +1,10 @@
-<section class="style-1 about-2" id="about">
+<section class="style-1 about-2" id="about-2">
 	<!-- CONTAINER -->
 	<div class="container-md">
 		<h1>Геополітична<br>
 			платформа UA-UK</h1>
-		<div class="content content-2 content-style-2">
-			<div class="content__main content-2__main">
+		<div class="content content-2 content-style-2 about-2__content">
+			<div class="content__main content-2__main about-2__main">
 				<p>Завдання платформи об'єднати навколо геополітичного проекту «U+» ключових, профільних експертів і
 					політиків
 					з сторони
@@ -22,7 +22,7 @@
 					з сторони
 					України і</p>
 			</div>
-			<div class="content__aside content-2__aside">
+			<div class="content__aside content-2__aside about-2__aside">
 				//=include('_members-list-1.html')
 			</div>
 		</div>
