Add for IMG attribute decoding=async

--- a/src/html_modules/_activities-list-1.html
+++ b/src/html_modules/_activities-list-1.html
@@ -2,7 +2,8 @@
 	<div>
 		<a href="javascript:void(0)">
 			<div>
-				<img src="img/building.svg" alt="" width="55" height="55" loading="lazy" class="activities__icon-building">
+				<img src="img/building.svg" alt="" width="55" height="55" loading="lazy" decoding="async"
+					class="activities__icon-building">
 			</div>
 			<div>
 				<strong>Політична панель</strong>
@@ -12,7 +13,8 @@
 	<div>
 		<a href="javascript:void(0)">
 			<div>
-				<img src="img/economic.svg" alt="" width="55" height="55" loading="lazy" class="activities__icon-economic">
+				<img src="img/economic.svg" alt="" width="55" height="55" loading="lazy" decoding="async"
+					class="activities__icon-economic">
 			</div>
 			<div>
 				<strong>Економічна панель</strong>
@@ -22,7 +24,8 @@
 	<div>
 		<a href="javascript:void(0)">
 			<div>
-				<img src="img/ukraine.svg" alt="" width="97" height="55" loading="lazy" class="activities__icon-ukraine">
+				<img src="img/ukraine.svg" alt="" width="97" height="55" loading="lazy" decoding="async"
+					class="activities__icon-ukraine">
 			</div>
 			<div>
 				<strong>Панель <br>
