--- a/src/html_modules/_members-list-1--short.html
+++ b/src/html_modules/_members-list-1--short.html
@@ -3,7 +3,7 @@
 		<a href="javascript:void(0)">
 			<div class="list-img-2">
 				<div>
-					<img src="img/sterlinglaw-member-img.svg" width="132" height="54" loading="lazy" alt="">
+					<img src="img/sterlinglaw-member-img.svg" width="132" height="54" loading="lazy" decoding="async" alt="">
 				</div>
 			</div>
 		</a>
@@ -12,7 +12,7 @@
 		<a href="javascript:void(0)">
 			<div class="list-img-2">
 				<div>
-					<img src="img/deltahunt-member-img.svg" width="140" height="30" loading="lazy" alt="">
+					<img src="img/deltahunt-member-img.svg" width="140" height="30" loading="lazy" decoding="async" alt="">
 				</div>
 			</div>
 		</a>
@@ -21,7 +21,7 @@
 		<a href="javascript:void(0)">
 			<div class="list-img-2">
 				<div>
-					<img src="img/ep-member-img.svg" alt="" width="99" height="11" loading="lazy">
+					<img src="img/ep-member-img.svg" alt="" width="99" height="11" loading="lazy" decoding="async">
 				</div>
 			</div>
 		</a>
@@ -32,7 +32,7 @@
 				<div>
 					<picture>
 						<source srcset="img/webp/mti-member-img.webp" type="image/webp">
-						<img src="img/mti-member-img.png" alt="" width="101" height="41" loading="lazy">
+						<img src="img/mti-member-img.png" alt="" width="101" height="41" loading="lazy" decoding="async">
 					</picture>
 				</div>
 			</div>
