--- a/src/html_modules/_news.html
+++ b/src/html_modules/_news.html
@@ -6,7 +6,7 @@
 				<div class="list-img">
 					<picture>
 						<source srcset="img/webp/news-img--big.webp" type="image/webp">
-						<img src="img/news-img--big.jpg" alt="" width="545" height="400" loading="lazy">
+						<img src="img/news-img--big.jpg" alt="" width="545" height="400" loading="lazy" decoding="async">
 					</picture>
 				</div>
 				<div>
@@ -20,7 +20,7 @@
 				<div class="list-img">
 					<picture>
 						<source srcset="img/webp/news-img--big.webp" type="image/webp">
-						<img src="img/news-img--big.jpg" alt="" width="545" height="400" loading="lazy">
+						<img src="img/news-img--big.jpg" alt="" width="545" height="400" loading="lazy" decoding="async">
 					</picture>
 				</div>
 				<div>
@@ -34,7 +34,7 @@
 				<div class="list-img">
 					<picture>
 						<source srcset="img/webp/news-img--big.webp" type="image/webp">
-						<img src="img/news-img--big.jpg" alt="" width="545" height="400" loading="lazy">
+						<img src="img/news-img--big.jpg" alt="" width="545" height="400" loading="lazy" decoding="async">
 					</picture>
 				</div>
 				<div>
@@ -48,7 +48,7 @@
 				<div class="list-img">
 					<picture>
 						<source srcset="img/webp/news-img--big.webp" type="image/webp">
-						<img src="img/news-img--big.jpg" alt="" width="545" height="400" loading="lazy">
+						<img src="img/news-img--big.jpg" alt="" width="545" height="400" loading="lazy" decoding="async">
 					</picture>
 				</div>
 				<div>
