--- a/src/html_modules/_person-details.html
+++ b/src/html_modules/_person-details.html
@@ -4,7 +4,7 @@
 			<div class="list-img person-details__img">
 				<picture>
 					<source srcset="img/webp/person-1-img--big.webp" type="image/webp">
-					<img src="img/person-1-img--big.jpg" alt="" width="245" height="356" loading="lazy">
+					<img src="img/person-1-img--big.jpg" alt="" width="245" height="356" loading="lazy" decoding="async">
 				</picture>
 			</div>
 		</aside>
