--- a/src/html_modules/_persons-list--short.html
+++ b/src/html_modules/_persons-list--short.html
@@ -4,7 +4,7 @@
 			<div class="list-img">
 				<picture>
 					<source srcset="img/webp/person-2-img.webp" type="image/webp">
-					<img src="img/person-2-img.jpg" alt="" width="200" height="279" loading="lazy">
+					<img src="img/person-2-img.jpg" alt="" width="200" height="279" loading="lazy" decoding="async">
 				</picture>
 			</div>
 			<div>
@@ -20,7 +20,7 @@
 			<div class="list-img">
 				<picture>
 					<source srcset="img/webp/person-1-img.webp" type="image/webp">
-					<img src="img/person-1-img.jpg" alt="" width="200" height="279" loading="lazy">
+					<img src="img/person-1-img.jpg" alt="" width="200" height="279" loading="lazy" decoding="async">
 				</picture>
 			</div>
 			<div>
@@ -35,7 +35,7 @@
 			<div class="list-img">
 				<picture>
 					<source srcset="img/webp/person-4-img.webp" type="image/webp">
-					<img src="img/person-4-img.jpg" alt="" width="200" height="279" loading="lazy">
+					<img src="img/person-4-img.jpg" alt="" width="200" height="279" loading="lazy" decoding="async">
 				</picture>
 			</div>
 			<div>
@@ -53,7 +53,7 @@
 			<div class="list-img">
 				<picture>
 					<source srcset="img/webp/person-3-img.webp" type="image/webp">
-					<img src="img/person-3-img.jpg" alt="" width="200" height="279" loading="lazy">
+					<img src="img/person-3-img.jpg" alt="" width="200" height="279" loading="lazy" decoding="async">
 				</picture>
 			</div>
 			<div>
