--- a/src/html_modules/_persons-slider-1.html
+++ b/src/html_modules/_persons-slider-1.html
@@ -16,7 +16,7 @@
 					<div class="list-img">
 						<picture>
 							<source srcset="img/webp/person-1-img.webp" type="image/webp">
-							<img src="img/person-1-img.jpg" alt="" width="200" height="279" loading="lazy">
+							<img src="img/person-1-img.jpg" alt="" width="200" height="279" loading="lazy" decoding="async">
 						</picture>
 					</div>
 					<div>
@@ -31,7 +31,7 @@
 					<div class="list-img">
 						<picture>
 							<source srcset="img/webp/person-2-img.webp" type="image/webp">
-							<img src="img/person-2-img.jpg" alt="" width="200" height="279" loading="lazy">
+							<img src="img/person-2-img.jpg" alt="" width="200" height="279" loading="lazy" decoding="async">
 						</picture>
 					</div>
 					<div>
@@ -47,7 +47,7 @@
 					<div class="list-img">
 						<picture>
 							<source srcset="img/webp/person-3-img.webp" type="image/webp">
-							<img src="img/person-3-img.jpg" alt="" width="200" height="279" loading="lazy">
+							<img src="img/person-3-img.jpg" alt="" width="200" height="279" loading="lazy" decoding="async">
 						</picture>
 					</div>
 					<div>
@@ -62,7 +62,7 @@
 					<div class="list-img">
 						<picture>
 							<source srcset="img/webp/person-4-img.webp" type="image/webp">
-							<img src="img/person-4-img.jpg" alt="" width="200" height="279" loading="lazy">
+							<img src="img/person-4-img.jpg" alt="" width="200" height="279" loading="lazy" decoding="async">
 						</picture>
 					</div>
 					<div>
