MODULE MODAL: Edit html

--- a/src/html_modules/_modal.html
+++ b/src/html_modules/_modal.html
@@ -6,6 +6,7 @@
 					<use href="img/sprite-svg-fill-delete.svg#close"></use>
 				</svg>
 			</button>
+			//=include('_join-form.html')
 		</div>
 	</div>
 </div>
